up to date with 0.9.10.3. Changes: - Fixed: dark theme detection fails in popular browser extension - Added: shortcut (ctrl + shift + e) for advanced merge dialog

--- a/src/app/style/dark.scss
+++ b/src/app/style/dark.scss
@@ -1,12 +1,11 @@
-:root {
-    --ui-bg-dark: #333;
-}
+// :root.kl-theme-dark is more specific just .kl-theme-dark
+:root.kl-theme-dark {
+    color-scheme: dark;
 
-body.kl-theme-dark {
+    --ui-bg-dark: #333;
     --kl-checkerboard-background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'><path d='M0,0h2v2H0z' fill='%235a5a5a'/><path d='M0,0h1v1H0zM1,1h1v1H1z' fill='%233f3f3f'/></svg>")
         0 0 / 8px;
 
-    color-scheme: dark;
     color: #ccc;
     background: rgb(33, 33, 33);
 
