--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -49,11 +49,14 @@
     box-sizing: border-box;
 }
 
+:root {
+    color-scheme: light;
+}
+
 body {
     overflow: hidden;
     font-size: 16px;
     overscroll-behavior-x: none; // prevent back gesture in Chrome
-    color-scheme: light;
 }
 
 body,
@@ -111,11 +114,11 @@ a:not([href]):hover {
 }
 
 .kl-toolspace--left {
-    border-right: 1px solid rgb(135, 135, 135);
+    border-right: 1px solid #bbb;
 }
 
 .kl-toolspace--right {
-    border-left: 1px solid rgb(135, 135, 135);
+    border-left: 1px solid #bbb;
 }
 
 .kl-toolspace-row {
